<resources>
    <string name="app_name">Moura</string>
    <string name="app_hint">Smart Hydroponic</string>
    <string name="devices_status">Devices Status</string>
    <string name="water_pump">Water Pump</string>
    <string name="mix_pump">Mix Pump</string>
    <string name="water_heater">Water Heater</string>
    <string name="cooling_fan">Cooling Fan</string>
    <string name="phup">pH Up</string>
    <string name="phdown">pH Down</string>
    <string name="ph_conditioner">pH Conditioner</string>
    <string name="nutri_conditioner">Nutri Conditioner</string>
    <string name="nutriup">Nutri Up</string>
    <string name="nutridown">Nutri Down</string>
    <string name="current_condition">Current Condition : </string>
    <string name="temperature">Temperature</string>
    <string name="nutrition">Nutrition</string>
    <string name="toolsTempt">28</string>
    <string name="toolsC">°C</string>
    <string name="toolsPpm">ppm</string>
    <string name="toolsNutri">1500</string>
    <string name="toolsPh">7.5</string>
    <string name="ph_meter">pH Meter</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="pump">Pump</string>
    <string name="ph">pH</string>
    <string name="command">Command</string>
    <string name="min_temperature">Min Temperature</string>
    <string name="set">Set</string>
    <string name="max_temperature">Max Temperature</string>
    <string name="set_temperature">Set Temperature</string>
    <string name="set_nutrition">Set Nutrition</string>
    <string name="set_pH">Set pH</string>
    <string name="set_pump">Set Pump</string>
    <string name="set_nutrition_level">Set Nutrition Level</string>
    <string name="set_ph_level">Set pH Level</string>
    <string name="set_pump_level">Set Pump Level</string>
    <string name="temperature_t">Pengaruh suhu juga tak kalah penting. Tumbuhan dapat tumbuh dengan baik pada suhu optimum yaitu berkisar antara 18 sampai 25 derajat celcius</string>
    <string name="nutrision_t">Perlu dipahami bawa untuk dapat tumbuh, tanaman pada umumnya membutuhkan unsur hara yang sangat kompleksDi alam, pengelompokan dibagi menjadi dua yaitu unsur hara makro dan unsur hara mikro.</string>
    <string name="ph_t">Level pH mempengaruhi pertumbuhan dan kelangsungan hidup tanaman hidroponik, pada larutan nutrisi hidroponik yang bersifat netral memungkinkan tanaman dapat tumbuh dengan baik dan bertahan hidup dalam jangka waktu yang maksimal</string>
    <string name="pump_t">Terdapat jenis hidroponik yang mengharuskan pompa selalu aktif dan ada juga yang dapat diatur sesuai keinginan</string>
    <string name="current_temperature_set">Temperature Set : %s °C - %s °C</string>
    <string name="current_nutrition_set">Nutrition Set : %d ppm</string>
    <string name="current_ph_set">pH Set \t: %s</string>
    <string name="current_temperature">Temperature Level : %s °C</string>
    <string name="current_nutrition">Nutrition Level : %d ppm</string>
    <string name="current_ph">pH Level \t: %s</string>
    <string name="please_fill_the_blank">Please Fill The Blank</string>
    <string name="min_temperature_error">Minimimal Temperature 0</string>
    <string name="nutrition_error">Minimimal Nutrition 0</string>
    <string name="ph_error">pH Range between 0 - 14</string>
    <string name="update_successfull">Update Successfull</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="signup_get_started">Sign up and get started</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="Login">Login</string>
    <string name="Logout">Logout</string>
    <string name="deviceid">Device ID</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="have_account">Have an account ?</string>
    <string name="dont_have_account">Don\'t have an account ?</string>
    <string name="login_here">Login here</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="login_to">Login to continue</string>
    <string name="email_required">Email Required</string>
    <string name="devicid_required">Device ID Required</string>
    <string name="password_required">Password Required</string>
    <string name="password_less">Password must minimal 6 character</string>
    <string name="password_different">Password is different</string>
    <string name="nothing_device">Device with ID %s not exist</string>
    <string name="about_us">About Us</string>
    <string name="help">Help</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_logout">Are you sure want to logout</string>
    <string name="send_reset_message">Send Reset Message</string>
    <string name="reset_password">Reset Password</string>
    <string name="account_not_exist_message">This is not an registered email, you can create new account</string>
    <string name="account_exist_message">a reset email has been sent to your email address</string>
    <string name="device_not_exist_message">Oops Device not found. You can update it below</string>
    <string name="new_device_id">New Device ID</string>
    <string name="update">Update</string>
    <string name="name">Name</string>
    <string name="name_required">Name Required</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="Save">Save</string>
    <string name="device_not_found">(Device not Found)</string>
    <string name="can_update">You can update your ID below</string>
    <string name="change_dev_id">Change Device ID</string>
    <string name="developer">Developer</string>
    <string name="icon_licence">Icon Licence</string>
    <string name="flaticon">Flat Icon</string>
    <string name="dev1">M Alfath Abibi</string>
    <string name="dev2">Fachran Setiawan W</string>
    <string name="emaildev2">farhansetiawan440@gmail.com</string>
    <string name="emaildev1">alfath.abibi@gmail.com</string>
    <string name="app_version">App Version</string>
    <string name="app_ver">1.0</string>

</resources>