<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.LoginActivity">

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:lineSpacingExtra="4sp"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="@color/hitam"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/cvBtnLogin"
        app:layout_constraintEnd_toEndOf="@+id/cvBtnLogin" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvBtnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/colorGray"
        app:cardCornerRadius="4dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ProgressBar
            android:id="@+id/progressBarLogin"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvBtnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:text="@string/Login"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvDontHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:lineSpacingExtra="4sp"
            android:text="@string/dont_have_account"
            android:textAlignment="center"
            android:textColor="@color/hitam"
            android:textSize="14sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tvSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="4sp"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="@color/hitam"
            android:textSize="14sp"
            android:textStyle="normal|bold" />
    </LinearLayout>

    <EditText
        android:id="@+id/etEmailLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/roundedbackgroundform"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="14dp"
        android:textAlignment="textStart"
        android:textColor="@color/hitam"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/etPasswordLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etPasswordLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/roundedbackgroundform"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="14dp"
        android:textAlignment="textStart"
        android:textColor="@color/hitam"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/tvForgotPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvWelcomeBack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:lineSpacingExtra="4sp"
        android:text="@string/welcome_back"
        android:textAlignment="center"
        android:textColor="@color/hitam"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLoginTo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="4sp"
        android:text="@string/login_to"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tvWelcomeBack"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcomeBack" />

    <ImageView
        android:id="@+id/ivLogoRegister"
        android:layout_width="160dp"
        android:layout_height="160dp"
        app:layout_constraintBottom_toTopOf="@+id/etEmailLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginTo"
        app:srcCompat="@drawable/set_nutrition" />

</androidx.constraintlayout.widget.ConstraintLayout>