<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".process.PhActivity">

    <TextView
        android:id="@+id/tvSetPh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textColor="@color/orange"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
        tools:text="@string/current_ph_set" />

    <TextView
        android:id="@+id/tvCurrentPh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textColor="@color/orange"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvSetPh"
        app:layout_constraintStart_toStartOf="@+id/tvSetPh"
        tools:text="@string/current_ph_set" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/roundedrectangle"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvBtnSetpH"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/tvCelciusPh"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvCelciusPh">

            <TextView
                android:id="@+id/tvBtnSetMaxT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:text="@string/set"
                android:textAlignment="center"
                android:textColor="@color/hijau"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2" />
        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/etMinPh"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/backgroundwhite"
            android:ems="10"
            android:hint="0"
            android:inputType="numberDecimal"
            android:maxLength="4"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMinPh" />

        <TextView
            android:id="@+id/tvCelciusPh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/ph"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/etMinPh"
            app:layout_constraintStart_toEndOf="@+id/etMinPh"
            app:layout_constraintTop_toTopOf="@+id/etMinPh" />

        <TextView
            android:id="@+id/tvMinPh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/set_ph_level"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/ivBackPh"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/left_arrow" />

    <TextView
        android:id="@+id/tvTitlePh"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:lineSpacingExtra="4sp"
        android:text="@string/set_pH"
        android:textAlignment="center"
        android:textColor="@color/hijau"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tvDescPh"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:lineSpacingExtra="4sp"
        android:text="@string/ph_t"
        android:textAlignment="center"
        android:textColor="@color/hijau"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitlePh" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="192dp"
        android:layout_height="192dp"
        app:layout_constraintBottom_toTopOf="@+id/tvCurrentPh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ph_orange" />

</androidx.constraintlayout.widget.ConstraintLayout>